force-app/main/default/objects/fboost__B_StepFunctionConfig__mdt/fboost__B_StepFunctionConfig__mdt.object-meta.xml
<CustomObject>
    <description>Describes Boost Step Function</description>
    <label>Boost Step Function Config</label>
    <pluralLabel>Boost Step Function Config</pluralLabel>
</CustomObject>