force-app/main/default/objects/fboost__B_StepFunctionConfig__mdt/fields/fboost__Async__c.field-meta.xml
<CustomField>
    <fullName>fboost__Async__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determine if action can be executed asynchronously. If this flag is checked the action class need to extends SObjectChangeModule.AsyncFunctionalStep.</description>
    <inlineHelpText>Determine if action can be executed asynchronously. If this flag is checked the action class need to extends SObjectChangeModule.AsyncFunctionalStep</inlineHelpText>
    <label>Async</label>
    <type>Checkbox</type>
</CustomField>