force-app/main/default/objects/fboost__B_StepFunctionConfig__mdt/fields/fboost__AsyncCustomStrategy__c.field-meta.xml
<CustomField>
    <fullName>fboost__AsyncCustomStrategy__c</fullName>
    <description>Async Custom Strategy name. Custom async processing strategies can be registered in the Boost Settings by implementing BoostPlugins.AsyncExecutionStrategyProvider interface</description>
    <inlineHelpText>Async Custom Strategy name. Custom async processing strategies can be registered in the Boost Settings by implementing BoostPlugins.AsyncExecutionStrategyProvider interface</inlineHelpText>
    <label>Async Custom Strategy</label>
    <length>40</length>
    <type>Text</type>
</CustomField>