force-app/main/default/objects/fboost__B_StepFunctionConfig__mdt/fields/fboost__AsyncStrategy__c.field-meta.xml
<CustomField>
    <fullName>fboost__AsyncStrategy__c</fullName>
    <defaultValue>&quot;MultiQueueable&quot;</defaultValue>
    <description>Determines async execution strategy.
Multi Queueable - process will be use multiple Queueable jobs to process requests (can be configured in Async Job Settings)
Direct - process will be executed synchronously in Platform Event trigger (use it only for simple logic)
Future - process will be executed in Salesforce Future method
Queueable - process will be executed in Salesforce Queueable
Batch - process will be executed in Salesforce Batch
Custom - please provide a custom execution strategy name</description>
    <inlineHelpText>Determines async execution strategy.
Multi Queueable - process will be use multiple Queueable jobs to process requests (can be configured in Async Job Settings)
Direct - process will be executed synchronously in Platform Event trigger (use it only for simple logic)
Future - process will be executed in Salesforce Future method
Queueable - process will be executed in Salesforce Queueable
Batch - process will be executed in Salesforce Batch
Custom - please provide a custom execution strategy name</inlineHelpText>
    <label>Async Strategy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MultiQueueable</fullName>
                <default>true</default>
                <label>Multi Queueable</label>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Future</fullName>
            </value>
            <value>
                <fullName>Queueable</fullName>
            </value>
            <value>
                <fullName>Batch</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>