force-app/main/default/objects/fboost__B_StepFunctionConfig__mdt/fields/fboost__AsyncThreshold__c.field-meta.xml
<CustomField>
    <fullName>fboost__AsyncThreshold__c</fullName>
    <description>Determines minimal number of records which need to be added to async context to run process in async scope</description>
    <inlineHelpText>Determines minimal number of records which need to be added to async context to run process in async scope.</inlineHelpText>
    <label>Async Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>