force-app/main/default/objects/fboost__B_StepFunctionConfig__mdt/fields/fboost__ClassName__c.field-meta.xml
<CustomField>
    <fullName>fboost__ClassName__c</fullName>
    <description>Class name of class which need to extend the SObjectChangeModule.FunctionalStep. If Anync flag is checked the action class need to extends SObjectChangeModule.AsyncFunctionalStep.</description>
    <inlineHelpText>Class name of class which need to extend the SObjectChangeModule.FunctionalStep. If Anync flag is checked the action class need to extends SObjectChangeModule.AsyncFunctionalStep</inlineHelpText>
    <label>Class Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>