force-app/main/default/objects/fboost__B_StepFunctionConfig__mdt/fields/fboost__IsActive__c.field-meta.xml
<CustomField>
    <fullName>fboost__IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determines if action is active.</description>
    <inlineHelpText>Determines if action is active</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>