force-app/main/default/objects/fboost__B_StepFunctionConfig__mdt/fields/fboost__Queued__c.field-meta.xml
<CustomField>
    <fullName>fboost__Queued__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determines if request need to be stored in the queue before execution. This flag need to be checked when process require fail safe logic.</description>
    <inlineHelpText>Determines if request need to be stored in the queue before execution. This flag need to be checked when process require fail safe logic.</inlineHelpText>
    <label>Queued</label>
    <type>Checkbox</type>
</CustomField>