force-app/main/default/objects/fboost__B_StepFunctionConfig__mdt/fields/fboost__SkipProcessAfterAddingToQueue__c.field-meta.xml
<CustomField>
    <fullName>fboost__SkipProcessAfterAddingToQueue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Skip process execution after adding job to the Process Scheduler Queue</description>
    <inlineHelpText>Skip process execution after adding job to the Process Scheduler Queue</inlineHelpText>
    <label>Skip Process After Adding To Queue</label>
    <type>Checkbox</type>
</CustomField>