force-app/main/default/objects/fboost__B_StepFunctionConfig__mdt/fields/fboost__StepFunctionsGroupConfig__c.field-meta.xml
<CustomField>
    <fullName>fboost__StepFunctionsGroupConfig__c</fullName>
    <description>Related Boost Step Functions Group Configuration</description>
    <inlineHelpText>Related Boost Step Functions Group Configuration</inlineHelpText>
    <label>Boost Step Functions Group</label>
    <referenceTo>fboost__B_StepFunctionsGroupConfig__mdt</referenceTo>
    <relationshipLabel>Boost Step Functions</relationshipLabel>
    <relationshipName>BoostStepFunctions</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>