force-app/main/default/objects/fboost__B_StepFunctionConfig__mdt/validationRules/fboost__StrategyNameRequiredForCustomStrategy.validationRule-meta.xml
<ValidationRule>
    <fullName>fboost__StrategyNameRequiredForCustomStrategy</fullName>
    <active>true</active>
    <description>The Async Custom Strategy is required for the Custom async execution strategy</description>
    <errorConditionFormula>fboost__Async__c &amp;&amp; ISPICKVAL(fboost__AsyncStrategy__c,&apos;Custom&apos;) &amp;&amp; ISBLANK(fboost__AsyncCustomStrategy__c)</errorConditionFormula>
    <errorDisplayField>fboost__AsyncCustomStrategy__c</errorDisplayField>
    <errorMessage>The Async Custom Strategy is required for the Custom async execution strategy</errorMessage>
</ValidationRule>