force-app/main/default/objects/fboost__B_StepFunctionConfig__mdt/listViews/fboost__AllInactive.listView-meta.xml
<ListView>
    <fullName>fboost__AllInactive</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>fboost__ClassName__c</columns>
    <columns>fboost__Order__c</columns>
    <columns>fboost__Queued__c</columns>
    <columns>fboost__SkipProcessAfterAddingToQueue__c</columns>
    <columns>fboost__AsyncStrategy__c</columns>
    <columns>fboost__Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>fboost__IsActive__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Inactive</label>
</ListView>